syntax = "proto3";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/loop/internal/pb/ccipocr3;ccipocr3pb";

package loop.internal.pb.ccipocr3;

import "models.proto";

// CommitPluginCodec is a service that can encode and decode reports generated by the Commit Plugin.
// Every chain family defines its own encoding schemes.
// For example an EVM implementation of CommitPluginCodec would use ABI encoding.
service CommitPluginCodec {
  rpc Encode(EncodeCommitPluginReportInput) returns (EncodeCommitPluginReportOutput) {}
  rpc Decode(DecodeCommitPluginReportInput) returns (DecodeCommitPluginReportOutput) {}
}

message EncodeCommitPluginReportInput {
  CommitPluginReport report = 1;
}

message EncodeCommitPluginReportOutput {
  bytes encoded_report = 1;
}

message DecodeCommitPluginReportInput {
  bytes encoded_report = 1;
}

message DecodeCommitPluginReportOutput {
  CommitPluginReport report = 1;
}
